<resources>
    <string name="app_name">Majika</string>
    <string name="title_twibbon">Twibbon</string>
    <string name="title_branch">Cabang</string>
    <string name="title_menu">Menu</string>
    <string name="title_cart">Keranjang</string>
    <string name="searchbar_hint">Masukkan nama menu…</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="branch_title">Judul</string>
    <string name="branch_location">Lokasi</string>
    <string name="maps">Peta</string>
    <string name="phone">Telepon</string>
    <string name="jumlah">Jumlah</string>
    <string name="hapus">Hapus</string>
    <string name="scan_qr">Scan QR</string>
    <string name="twibbon">CAPTURE</string>
    <string name="pay">Bayar</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="twibbon_retake">Retake Photo</string>
    <string name="twibbon_flip">Flip Camera</string>
    <string name="qrText">Scanning...</string>
    <string name="action_settings">Test</string>
</resources>