<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/purple_700">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerPadding="10sp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="10sp"
                android:paddingVertical="10sp">

                <TextView
                    android:id="@+id/branch_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="16sp"
                    android:text="@string/branch_title"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/branch_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/branch_location"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/maps_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/maps" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>