<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="10dp"
            app:cardBackgroundColor="@color/purple_500">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp">

                <TextView
                    android:id="@+id/food_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/food_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/amount_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/jumlah"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|end"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/minus_buton"
                            android:layout_width="48dp"
                            android:layout_height="match_parent"
                            android:background="@color/black"
                            android:text="@string/minus_sign" />

                        <TextView
                            android:id="@+id/amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10sp"
                            android:layout_marginVertical="10sp"
                            android:textColor="@color/white" />

                        <Button
                            android:id="@+id/plus_button"
                            android:layout_width="48dp"
                            android:layout_height="wrap_content"
                            android:background="@color/black"
                            android:text="@string/plus_sign" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>